# Glint

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-16-glint-mvp.md
docs/superpowers/specs/: 2026-03-16-glint-mvp-design.md
glint/: __main__.py  app.py  app.tcss  cli.py  pty_manager.py  turn_parser.py
glint/widgets/: turn_widget.py
tests/: test_app.py  test_pty_manager.py  test_turn_parser.py  test_turn_widget.py
